--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="login_layout_margin">24dp</dimen>
     <dimen name="button_margin_top_input">8dp</dimen>
     <dimen name="lottie_square_animation_size">300dp</dimen>
+    <dimen name="user_info_display_margin">24dp</dimen>
 </resources>
