--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,10 +9,9 @@
         <item name="colorOnError">@color/cardinal</item>
         <item name="android:textColorPrimary">@color/mystic</item>
         <item name="colorAccent">@color/denim</item>
-        <item name="android:windowLightStatusBar">true</item>
 
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryDark</item>
         <!-- Customize your theme here. -->
     </style>
 
