--- a/app/src/main/res/layout/fragment_forgotten_password.xml
+++ b/app/src/main/res/layout/fragment_forgotten_password.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto_slab"
             android:text="@string/forgot_your_password_title"
-            android:textColor="@color/denim"
+            android:textColor="?attr/colorPrimary"
             android:textSize="@dimen/small_title_text_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -63,7 +63,7 @@
             android:fontFamily="@font/roboto_slab"
             android:gravity="center"
             android:text="@string/forgotten_password_instruction"
-            android:textColor="@color/chathams_blue"
+            android:textColor="?attr/colorPrimaryDark"
             android:textSize="@dimen/small_text_size"
             android:maxWidth="@dimen/lottie_square_animation_size"
             app:layout_constraintBottom_toTopOf="@+id/email_input_guideline"
