--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -28,7 +28,7 @@
             app:civ_border_color="@color/black"
             app:civ_border_width="1dp"
             app:civ_shadow="true"
-            app:civ_shadow_color="@color/chathams_blue"
+            app:civ_shadow_color="?attr/colorPrimaryDark"
             app:civ_shadow_radius="0dp"
              />
 
@@ -68,7 +68,6 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/user_activity_list_btn_height"
         android:elegantTextHeight="true"
-        android:fontFamily="@font/roboto_slab"
         android:gravity="start|center_vertical"
         android:text="@string/scan_history"
         android:textAllCaps="false"
@@ -86,7 +85,6 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/user_activity_list_btn_height"
         android:elegantTextHeight="true"
-        android:fontFamily="@font/roboto_slab"
         android:gravity="start|center_vertical"
         android:text="@string/settings"
         android:textAllCaps="false"
@@ -104,6 +102,9 @@
         android:layout_height="@dimen/medium_btn_height"
         android:layout_marginStart="@dimen/general_btn_margin"
         android:layout_marginTop="64dp"
+        app:icon="@drawable/ic_logout"
+        app:iconGravity="textStart"
+        android:gravity="center"
         android:layout_marginEnd="@dimen/general_btn_margin"
         android:background="@drawable/button_round_style"
         android:text="@string/logout"
