--- a/app/src/main/res/layout/fragment_password_reset_email_sent.xml
+++ b/app/src/main/res/layout/fragment_password_reset_email_sent.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_slab"
         android:text="@string/email_sent"
-        android:textColor="@color/denim"
+        android:textColor="?attr/colorPrimary"
         android:textSize="@dimen/small_title_text_size"
         app:layout_constraintBottom_toTopOf="@id/email_sent_animation"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
         android:fontFamily="@font/roboto_slab"
         android:gravity="center"
         android:text="@string/password_reset_email_sent_description"
-        android:textColor="@color/chathams_blue"
+        android:textColor="?attr/colorPrimaryDark"
         android:textSize="@dimen/small_text_size"
         android:maxWidth="@dimen/lottie_square_animation_size"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +91,7 @@
             android:layout_height="wrap_content"
             android:text="@string/didnt_receive_email"
             android:fontFamily="@font/roboto_slab"
-            android:textColor="@color/chathams_blue"
+            android:textColor="?attr/colorPrimaryDark"
             android:textSize="@dimen/small_text_size" />
 
         <TextView
