--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
         android:src="@drawable/scan_ic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/robin_blue"
         app:layout_anchor="@id/bottomBar"
         android:contentDescription="@string/scan_a_barcode" />
 
