--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="user_activity_list_btn_height">72dp</dimen>
     <dimen name="user_activity_list_btn_text_size">18sp</dimen>
     <dimen name="user_activity_list_btn_icon_padding">24dp</dimen>
+    <dimen name="me_fragment_user_profile_img_size">100dp</dimen>
+    <dimen name="home_fragment_user_img_size">40dp</dimen>
 </resources>
