--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,47 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.HomeFragment">
+    android:fitsSystemWindows="true"
+    tools:ignore="MergeRootFrame">
 
+<!--    <com.google.android.material.appbar.AppBarLayout-->
+<!--        android:id="@+id/home_app_bar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="200dp"-->
+<!--        android:fitsSystemWindows="true"-->
+<!--        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->
 
-    <TextView
-        android:id="@+id/welcome_username_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_slab"
-        android:maxLength="24"
-        android:layout_marginStart="24dp"
-        android:textColor="@color/black"
-        android:textSize="@dimen/small_title_text_size"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/top_guideline" />
+<!--        <com.google.android.material.appbar.CollapsingToolbarLayout-->
+<!--            android:id="@+id/home_collapsing_toolbar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:fitsSystemWindows="true"-->
+<!--            app:contentScrim="?attr/colorPrimary"-->
+<!--            app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
+<!--            app:toolbarId="@+id/collapsing_toolbar_id">-->
 
-    <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/home_user_img"
-        android:layout_width="@dimen/home_fragment_user_img_size"
-        android:layout_height="@dimen/home_fragment_user_img_size"
-        android:layout_marginEnd="24dp"
-        android:src="@drawable/ic_person"
-        app:civ_border_color="@color/black"
-        app:civ_border_width="1dp"
-        app:civ_shadow="true"
-        app:civ_shadow_color="?attr/colorPrimaryDark"
-        app:civ_shadow_radius="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/welcome_username_tv"
-        app:layout_constraintTop_toBottomOf="@id/top_guideline" />
+<!--            <ImageView-->
+<!--                android:id="@+id/home_collapsing_toolbar_img"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:scaleType="centerCrop"-->
+<!--                android:fitsSystemWindows="true"-->
+<!--                app:layout_collapseMode="parallax"-->
+<!--                android:src="@drawable/monash_uni_img" />-->
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/top_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.03" />
+<!--            <androidx.appcompat.widget.Toolbar-->
+<!--                android:id="@+id/home_toolbar"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="?attr/actionBarSize"-->
+<!--                app:layout_collapseMode="pin"-->
+<!--                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->
 
+<!--        </com.google.android.material.appbar.CollapsingToolbarLayout>-->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<!--    </com.google.android.material.appbar.AppBarLayout>-->
+
+    <include layout="@layout/fragment_home_content" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
