--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -63,6 +63,23 @@
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/starred_btn"
+        style="?attr/materialButtonOutlinedStyle"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/user_activity_list_btn_height"
+        android:elegantTextHeight="true"
+        android:gravity="start|center_vertical"
+        android:text="@string/starred"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:textSize="@dimen/user_activity_list_btn_text_size"
+        app:icon="@drawable/ic_star"
+        app:iconPadding="@dimen/user_activity_list_btn_icon_padding"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/top_guideline" />
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/scan_history_btn"
         style="?attr/materialButtonOutlinedStyle"
         android:layout_width="match_parent"
@@ -77,7 +94,7 @@
         app:icon="@drawable/ic_history"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/top_guideline" />
+        app:layout_constraintTop_toBottomOf="@id/starred_btn" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/settings_btn"
