ScanActivity Permission crash FIXED!!! Was able to test barcode scanning on the emulator, worked well!

--- a/app/src/main/res/layout/home_recom_product_cardview.xml
+++ b/app/src/main/res/layout/home_recom_product_cardview.xml
@@ -19,7 +19,7 @@
             android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="A product card"
+            android:text="A recommended product "
             card_view:layout_constraintTop_toTopOf="parent"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
