--- a/app/src/main/res/layout/activity_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_forgotten_password.xml
@@ -1,12 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout
+<ScrollView
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fp_fragment_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ForgottenPasswordActivity">
+    android:layout_height="wrap_content"
+    tools:context=".ForgottenPasswordActivity"
+    >
 
-</FrameLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/top_back_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:contentDescription="@string/back_btn_content_description"
+            android:src="@drawable/ic_arrow_back"
+            app:layout_constraintBottom_toTopOf="@+id/back_btn_h_guideline"
+            app:layout_constraintEnd_toStartOf="@+id/back_btn_v_guideline"
+            app:layout_constraintHorizontal_bias="0.75"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.75"
+            tools:ignore="TouchTargetSizeCheck" />
+
+        <TextView
+            android:id="@+id/activity_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto_slab"
+            android:text="@string/forgot_your_password_title"
+            android:textColor="?attr/colorPrimary"
+            android:textSize="@dimen/small_title_text_size"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/back_btn_h_guideline" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/forgot_password_animation"
+            android:layout_width="@dimen/lottie_square_animation_size"
+            android:layout_height="@dimen/lottie_square_animation_size"
+            android:layout_marginTop="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/activity_title"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/forgot_password" />
+
+        <TextView
+            android:id="@+id/forgotten_password_instruction"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/general_btn_margin"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="@dimen/general_btn_margin"
+            android:layout_marginBottom="24dp"
+            android:fontFamily="@font/roboto_slab"
+            android:gravity="center"
+            android:text="@string/forgotten_password_instruction"
+            android:textColor="?attr/colorPrimaryDark"
+            android:textSize="@dimen/small_text_size"
+            android:maxWidth="@dimen/lottie_square_animation_size"
+            app:layout_constraintBottom_toTopOf="@+id/email_input_guideline"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/forgot_password_animation"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/email_input"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/general_btn_margin"
+            android:layout_marginEnd="@dimen/general_btn_margin"
+            app:startIconContentDescription="@string/content_description_start_icon"
+            app:endIconContentDescription="@string/content_description_end_icon"
+            app:endIconMode="clear_text"
+            app:errorEnabled="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/email_input_guideline"
+            app:startIconDrawable="@drawable/ic_email">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/email_input_et"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/email_sign_up"
+                android:maxLength="50"
+                tools:ignore="TouchTargetSizeCheck" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/send_email_btn"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/medium_btn_height"
+            android:layout_marginStart="@dimen/general_btn_margin"
+            android:layout_marginEnd="@dimen/general_btn_margin"
+            android:background="@drawable/button_round_style"
+            android:text="@string/send_email"
+            android:layout_marginTop="@dimen/button_margin_top_input"
+            android:textAllCaps="false"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/email_input"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/back_btn_h_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.07" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/back_btn_v_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.1" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/email_input_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.8" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
