--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,7 +7,7 @@
         <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorOnPrimary">@color/mystic</item>
         <item name="colorOnError">@color/cardinal</item>
-        <item name="android:textColorPrimary">@color/mystic</item>
+        <item name="android:textColorPrimary">@color/black</item>
         <item name="colorAccent">@color/denim</item>
 
         <!-- Status bar color. -->
