Added slight button animations. Fixed buttons no effects on interactions.

--- a/app/src/main/res/layout/activity_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_forgotten_password.xml
@@ -62,10 +62,10 @@
             android:layout_marginBottom="24dp"
             android:fontFamily="@font/roboto_slab"
             android:gravity="center"
+            android:maxWidth="@dimen/lottie_square_animation_size"
             android:text="@string/forgotten_password_instruction"
             android:textColor="?attr/colorPrimaryDark"
             android:textSize="@dimen/small_text_size"
-            android:maxWidth="@dimen/lottie_square_animation_size"
             app:layout_constraintBottom_toTopOf="@+id/email_input_guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -74,15 +74,10 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/email_input"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/general_btn_margin"
-            android:layout_marginEnd="@dimen/general_btn_margin"
-            app:startIconContentDescription="@string/content_description_start_icon"
-            app:endIconContentDescription="@string/content_description_end_icon"
             app:endIconMode="clear_text"
-            app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/email_input_guideline"
@@ -99,12 +94,13 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
+            style="@style/Widget.Scannera.Button"
             android:id="@+id/send_email_btn"
             android:layout_width="match_parent"
             android:layout_height="@dimen/medium_btn_height"
             android:layout_marginStart="@dimen/general_btn_margin"
             android:layout_marginEnd="@dimen/general_btn_margin"
-            android:background="@drawable/button_round_style"
+            app:cornerRadius="@dimen/round_btn_corner_radius"
             android:text="@string/send_email"
             android:layout_marginTop="@dimen/button_margin_top_input"
             android:textAllCaps="false"
@@ -131,7 +127,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.8" />
+            app:layout_constraintGuide_percent="0.75" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
