--- a/app/src/main/res/layout/activity_password_email_sent.xml
+++ b/app/src/main/res/layout/activity_password_email_sent.xml
@@ -63,13 +63,14 @@
         app:layout_constraintTop_toBottomOf="@+id/email_sent_animation" />
 
     <com.google.android.material.button.MaterialButton
+        style="@style/Widget.Scannera.Button"
         android:id="@+id/login_btn"
         android:layout_width="match_parent"
         android:layout_height="@dimen/medium_btn_height"
         android:layout_marginStart="@dimen/login_layout_margin"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="@dimen/login_layout_margin"
-        android:background="@drawable/button_round_style"
+        app:cornerRadius="@dimen/round_btn_corner_radius"
         android:text="@string/login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
