--- a/app/src/main/res/layout/home_recom_product_cardview.xml
+++ b/app/src/main/res/layout/home_recom_product_cardview.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/pc_card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
+    app:cardElevation="2dp"
+    app:cardPreventCornerOverlap="true"
     android:clickable="true"
     card_view:cardBackgroundColor="@android:color/holo_orange_light"
     card_view:cardCornerRadius="5dp">
