--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,18 +45,13 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/username_login"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/login_layout_margin"
-            android:layout_marginEnd="@dimen/login_layout_margin"
-            app:endIconContentDescription="@string/content_description_end_icon"
             app:endIconMode="clear_text"
-            app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/split_guideline"
-            app:startIconContentDescription="@string/content_description_start_icon"
             app:startIconDrawable="@drawable/ic_person">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -70,18 +65,13 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/password_login"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/login_layout_margin"
-            android:layout_marginEnd="@dimen/login_layout_margin"
-            app:endIconContentDescription="@string/content_description_end_icon"
             app:endIconMode="password_toggle"
-            app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/username_login"
-            app:startIconContentDescription="@string/content_description_start_icon"
             app:startIconDrawable="@drawable/ic_lock">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -107,19 +97,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/password_login" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/login_btn"
+            style="@style/Widget.Scannera.Button"
             android:layout_width="match_parent"
             android:layout_height="@dimen/medium_btn_height"
-            android:background="@drawable/button_round_style"
-            android:text="@string/login"
             android:layout_marginStart="@dimen/login_layout_margin"
+            android:layout_marginTop="60dp"
             android:layout_marginEnd="@dimen/login_layout_margin"
-            android:layout_marginTop="72dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="@string/login"
+            app:cornerRadius="@dimen/round_btn_corner_radius"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/password_login"/>
-
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/password_login" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -163,7 +153,6 @@
                     android:layout_margin="@dimen/social_icons_margin"
                     android:clickable="true"
                     android:src="@drawable/google_ic" />
-
             </LinearLayout>
         </LinearLayout>
 
