--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,7 +8,8 @@
     <dimen name="small_title_text_size">28sp</dimen>
     <dimen name="title_text_size">35sp</dimen>
     <dimen name="small_text_size">16sp</dimen>
-    <dimen name="medium_btn_height">48dp</dimen>
+    <dimen name="medium_btn_height">60dp</dimen>
+    <dimen name="round_btn_corner_radius">24dp</dimen>
     <dimen name="login_layout_margin">24dp</dimen>
     <dimen name="button_margin_top_input">8dp</dimen>
     <dimen name="lottie_square_animation_size">300dp</dimen>
