--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.MeFragment">
+    tools:context=".Fragments.AccountFragment">
 
     <LinearLayout
         android:id="@+id/user_info_top"
@@ -30,7 +30,7 @@
             app:civ_shadow="true"
             app:civ_shadow_color="?attr/colorPrimaryDark"
             app:civ_shadow_radius="0dp"
-             />
+            />
 
         <LinearLayout
             android:layout_width="wrap_content"
