--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -97,17 +97,17 @@
         app:layout_constraintTop_toBottomOf="@id/starred_btn" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/settings_btn"
+        android:id="@+id/about_us_btn"
         style="?attr/materialButtonOutlinedStyle"
         android:layout_width="match_parent"
         android:layout_height="@dimen/user_activity_list_btn_height"
         android:elegantTextHeight="true"
         android:gravity="start|center_vertical"
-        android:text="@string/settings"
+        android:text="@string/about_us"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="@dimen/user_activity_list_btn_text_size"
-        app:icon="@drawable/ic_settings"
+        app:icon="@drawable/ic_info"
         app:iconPadding="@dimen/user_activity_list_btn_icon_padding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -128,7 +128,7 @@
         android:text="@string/logout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settings_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/about_us_btn" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/top_guideline"
